[project]
name = "research-agent-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.105.0",
    "dbos==2.22.0",
    "fastapi[standard]>=0.128.0",
    "google-genai>=1.0.0",
    "logfire>=4.16.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
]
